backend/debug_log.txt
Starting analysis for uploads/98c153ea-643e-45ee-86a0-dddf7491d8dc.mp4
Video info: 1920x1080, 30.0fps, 99 frames
CRITICAL ERROR in loop: could not broadcast input array from shape (3,1) into shape (3,)
Traceback (most recent call last):
  File "C:\Users\qorkd\.gemini\축구슈팅측정\backend\analyze_shot.py", line 303, in run
    pos_3d_filtered = self.tracker3d.update(pos_3d_measured)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\qorkd\.gemini\축구슈팅측정\backend\analyze_shot.py", line 124, in update
    self.kf.statePost[:3] = measurement_3d.reshape(3, 1)
    ~~~~~~~~~~~~~~~~~^^^^
ValueError: could not broadcast input array from shape (3,1) into shape (3,)

Starting analysis for uploads/7ad900b3-eed4-401c-a2e7-cf010cd10f4b.mp4
Video info: 1920x1080, 30.0fps, 99 frames
CRITICAL ERROR in loop: OpenCV(4.11.0) D:\a\opencv-python\opencv-python\opencv\modules\core\src\matmul.dispatch.cpp:386: error: (-215:Assertion failed) C.type() == type in function 'cv::gemm'

Traceback (most recent call last):
  File "C:\Users\qorkd\.gemini\축구슈팅측정\backend\analyze_shot.py", line 303, in run
    pos_3d_filtered = self.tracker3d.update(pos_3d_measured)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\qorkd\.gemini\축구슈팅측정\backend\analyze_shot.py", line 143, in update
    self.kf.correct(measurement_3d.reshape(3, 1))
cv2.error: OpenCV(4.11.0) D:\a\opencv-python\opencv-python\opencv\modules\core\src\matmul.dispatch.cpp:386: error: (-215:Assertion failed) C.type() == type in function 'cv::gemm'


Starting analysis for uploads/c9163a25-b7da-4853-839f-3ce8102fd823.mp4
Video info: 1920x1080, 30.0fps, 307 frames
CRITICAL ERROR in loop: OpenCV(4.11.0) D:\a\opencv-python\opencv-python\opencv\modules\core\src\matmul.dispatch.cpp:386: error: (-215:Assertion failed) C.type() == type in function 'cv::gemm'

Traceback (most recent call last):
  File "C:\Users\qorkd\.gemini\축구슈팅측정\backend\analyze_shot.py", line 303, in run
    pos_3d_filtered = self.tracker3d.update(pos_3d_measured)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\qorkd\.gemini\축구슈팅측정\backend\analyze_shot.py", line 143, in update
    self.kf.correct(measurement_3d.reshape(3, 1))
cv2.error: OpenCV(4.11.0) D:\a\opencv-python\opencv-python\opencv\modules\core\src\matmul.dispatch.cpp:386: error: (-215:Assertion failed) C.type() == type in function 'cv::gemm'


Starting analysis for uploads/771c8e46-da32-49b7-8b44-2e9c5b44f01a.mp4
Video info: 1920x1080, 30.0fps, 99 frames
Speed Check: 0.00 m/s
Low Hist Score: -0.052 (Warning only)
KF Update: dist=0.02m
CRITICAL ERROR in loop: OpenCV(4.11.0) D:\a\opencv-python\opencv-python\opencv\modules\core\src\matmul.dispatch.cpp:386: error: (-215:Assertion failed) C.type() == type in function 'cv::gemm'

Traceback (most recent call last):
  File "C:\Users\qorkd\.gemini\축구슈팅측정\backend\analyze_shot.py", line 308, in run
    pos_3d_filtered = self.tracker3d.update(pos_3d_measured)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\qorkd\.gemini\축구슈팅측정\backend\analyze_shot.py", line 145, in update
    self.kf.correct(measurement_3d.reshape(3, 1))
cv2.error: OpenCV(4.11.0) D:\a\opencv-python\opencv-python\opencv\modules\core\src\matmul.dispatch.cpp:386: error: (-215:Assertion failed) C.type() == type in function 'cv::gemm'


